--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,8 +1,13 @@
-.home{
+.home_center{
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #f0f2f5;
     width: 80%;
     height: auto;
+}
+.home{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
